# KidneyExchangeOptimization

./: .gitignore  CMakeLists-LOCAL.txt  CMakeLists-REMOTE.txt  KIDNEY_EXCHANGE_MODEL.cpp  Makefile  README.md  command.sh  copy_output_structure.sh  functions.cpp  functions.h  main.cpp  meeting_notes.txt  notes.txt
Own/: Makefile  main.cpp
hyperparameter_tuning/: analsyze.ipynb  json_formatter.py  parser.py  results.csv
logs/: 2024-11-04_:_Kidney_Matching_16_0_:_KP_Num2_N16_A0.txt.csv  2024-11-04_:_Kidney_Matching_16_0__KP_Num2_N16_A0.txt.csv  2024-11-04__+Users+juliusmiers+CodingWS24+ORSeminar+instances+PrefLib+Kidney_Matching_16_0+KP_Num2_N16_A0.txt.csv  2024-11-05_:_Kidney_Matching_16_0_:_KP_Num2_N16_A0.csv  2024-11-05_:_Kidney_Matching_16_0_:_KP_Num2_N16_A0.txt  2024-11-06_:_Kidney_Matching_16_0_:_KP_Num2_N16_A0.csv  2024-11-06_:_Kidney_Matching_16_0_:_KP_Num2_N16_A0.txt  2024-11-07_:_Kidney_Matching_16_0_:_KP_Num2_N16_A0.csv  2024-11-07_:_Kidney_Matching_16_0_:_KP_Num2_N16_A0.txt  2024-11-08_:_Kidney_Matching_16_0_:_KP_Num2_N16_A0.csv  2024-11-08_:_Kidney_Matching_16_0_:_KP_Num2_N16_A0.txt  2024-11-14_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.csv  2024-11-14_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.txt  2024-11-15_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.csv  2024-11-15_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.txt  2024-11-16_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.csv  2024-11-16_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.txt  2024-11-20_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.csv  2024-11-20_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.txt  2024-12-26_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.csv  2024-12-26_:_Kidney_Matching_16_0_:_KP_Num1_N16_A0.txt  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num121_N134_A6.csv  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num121_N134_A6.txt  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num122_N134_A6.csv  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num122_N134_A6.txt  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num123_N134_A6.csv  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num123_N134_A6.txt  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num124_N134_A6.csv  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num124_N134_A6.txt  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num125_N134_A6.csv  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num125_N134_A6.txt  2025-01-12_:_Kidney_Matching_134_6_:_KP_Num126_N134_A6.csv  (+274 more)
src/: AugmentedNetwork.cpp  BB.cpp  BBTree.cpp  CMakeLists.txt  Class_Problem.cpp  Class_Problem_VFS.hpp  DataReader.cpp  DataReader.hpp  FindCycles.cpp  KIDNEY_EXCHANGE_MODEL.hpp  KidneyModel.cpp  KidneyModel.hpp  LagrangianRelaxation.cpp  Logger.cpp  Logger.hpp  LongestPath.cpp  OperationTracer.cpp  OperationTracer.hpp  ReadData.cpp  TODO.txt  _OwnModel.cpp  _OwnModel.hpp  _ownDataReader.cpp  _ownKidneyModel.cpp  _ownKidneyModel.hpp  _own_ChainFinder.hpp  _own_CycleChainFinder.cpp  _own_CycleChainFinder.hpp  _own_CycleFinder.cpp  _own_CycleFinder.hpp  _own_DataReader.cpp  _own_DataReader.hpp  _own_KidneyModel.cpp  _own_KidneyModel.hpp  _own_Logger.cpp  _own_Logger.hpp  _own_Utility.cpp  _own_Utility.hpp  main.cpp  timer.cpp  (+1 more)
(+6 files in other folders)
